--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "firebase": "^9.9.1",
     "npm": "^8.13.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
