--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.8",
     "react-toggle": "^4.1.1",
     "sass": "^1.49.9",
     "uuid": "^8.3.2"
